src/test/ui/const-generics/const-param-type-depends-on-type-param.full.stderr
error[E0770]: the type of const parameters must not depend on other generic parameters
  --> $DIR/const-param-type-depends-on-type-param.rs:11:34
   |
LL | pub struct Dependent<T, const X: T>([(); X]);
   |                                  ^ the type must not depend on the parameter `T`

error[E0392]: parameter `T` is never used
  --> $DIR/const-param-type-depends-on-type-param.rs:11:22
   |
LL | pub struct Dependent<T, const X: T>([(); X]);
   |                      ^ unused parameter
   |
   = help: consider removing `T`, referring to it in a field, or using a marker such as `PhantomData`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0392, E0770.
For more information about an error, try `rustc --explain E0392`.
